--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,10 @@
-<h2>Home</h2>
+<h2>Pagination</h2>
+
+<a class="previous">Previous</a>
+<div class="container">
+
+</div>
+<a class="next">Next</a>
+<section>
+    <a class="current-page"></a>/<a class="total-pages"></a>
+</section>
