--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -2,4 +2,13 @@
 
 ce-home {
 	display:block;
+
+    .next,
+    .previous {
+        cursor:pointer;
+    }
+
+    section {
+        margin:30px 0px;
+    }
 }
