--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,11 @@
 <h2>Pagination</h2>
 
-<a class="previous">Previous</a>
-<div class="container">
+<div class="container"></div>
 
-</div>
-<a class="next">Next</a>
 <section>
-    <a class="current-page"></a>/<a class="total-pages"></a>
+    <a class="previous">Previous</a>
+    <span class="current-page-container">
+        <a class="current-page"></a>/<a class="total-pages"></a>
+    </span>    
+    <a class="next">Next</a>
 </section>
