--- a/src/app/avatars/avatar-rotator.component.html
+++ b/src/app/avatars/avatar-rotator.component.html
@@ -1,4 +1,4 @@
-<h2>Pagination</h2>
+<h2>Avatar Rotator</h2>
 
 <div class="container"></div>
 
@@ -6,6 +6,6 @@
     <a class="previous">Previous</a>
     <span class="current-page-container">
         <a class="current-page"></a>/<a class="total-pages"></a>
-    </span>    
+    </span>
     <a class="next">Next</a>
 </section>
