--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,4 @@
-body,html {
+:root {
     font-family:Montserrat,sans-serif;
     width:100%;
     padding:0;
@@ -32,6 +32,3 @@ ce-app {
         max-width: 100%;
     }
 }
-
-
-
