--- a/src/app/avatars/avatar-rotator.component.scss
+++ b/src/app/avatars/avatar-rotator.component.scss
@@ -47,7 +47,7 @@ ce-avatar-rotator {
 
 }
 
-@media only screen and (min-width: $screen-lg-min) { 
+@media only screen and (min-width: 1280px) { 
 
 
 }
