--- a/src/app/avatars/avatar-filter-input.component.css
+++ b/src/app/avatars/avatar-filter-input.component.css
@@ -1,5 +1,6 @@
 ﻿input {
     width: calc(100% - 84px);
+    max-width:400px;
     line-height: 3em;
     padding: 0px 20px 0px 20px;
     margin:0px 20px 0px 20px;
