--- a/src/app/avatars/avatar-rotator.component.css
+++ b/src/app/avatars/avatar-rotator.component.css
@@ -1,6 +1,6 @@
 :host {
 	display:block;
-    width:400px;
+    max-width:400px;
 }
 
 h2 {
@@ -14,6 +14,7 @@ h2 {
 
 .container {
     width: 100%;
+    max-height:400px;
     height: 200px;
     display: inline-block;
     margin: 0 auto;
