--- a/src/app/avatars/avatar-rotator.component.css
+++ b/src/app/avatars/avatar-rotator.component.css
@@ -1,10 +1,19 @@
 :host {
-	display:block;
+	display:grid;
+    grid-template-columns:1fr;
+    grid-template-rows: 3em 250px 20px;
+    grid-gap:0px;
     max-width:400px;
 }
 
 h2 {
     text-align: center;
+    
+}
+
+img {
+    display:block;
+    margin:0 auto;
 }
 
 .next,
@@ -13,11 +22,11 @@ h2 {
 }
 
 .container {
+    padding:0;
     width: 100%;
-    max-height:400px;
     height: 200px;
-    display: inline-block;
-    margin: 0 auto;
+    display: block;
+    margin: 0;
     text-align: center;
 }
 
