--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,7 @@
 :host {
     display:block;
     height:100vh;   
-    width:440px;
+    width:540px;
     margin:0 auto;
 }
 
@@ -17,5 +17,6 @@
     position: relative;
     margin: 0;
     padding: 0;
+    width:100%;
     max-width: 100%;
 }
