--- a/src/app/avatars/avatar-rotator.component.css
+++ b/src/app/avatars/avatar-rotator.component.css
@@ -1,14 +1,19 @@
 :host {
-	display:grid;
-    grid-template-columns:1fr;
+    display: grid;
+    grid-template-columns: 1fr;
     grid-template-rows: 3em 250px 20px;
-    grid-gap:0px;
-    max-width:400px;
+    grid-gap: 0px;
+    user-select: none;
 }
 
 h2 {
-    text-align: center;
-    
+    text-align: center;   
+}
+
+h2 span {
+    font-size:0.75em;
+    font-weight:100;
+    font-style:italic;
 }
 
 img {
@@ -33,6 +38,7 @@ img {
 section {
     margin: 30px 0px;
     width: 100%;
+    user-select:none;
 }
 
 section .previous, section .current-page-container, section .next {
