--- a/src/app/avatars/avatar-rotator.component.html
+++ b/src/app/avatars/avatar-rotator.component.html
@@ -2,10 +2,4 @@
 
 <div class="container"></div>
 
-<section>
-    <a class="previous">Previous</a>
-    <span class="current-page-container">
-        <a class="current-page"></a>/<a class="total-pages"></a>
-    </span>
-    <a class="next">Next</a>
-</section>
+<ce-pager></ce-pager>
