--- a/src/app/avatars/avatar-rotator.component.css
+++ b/src/app/avatars/avatar-rotator.component.css
@@ -42,6 +42,6 @@ ce-avatar-not-found {
     display: none;
 }
 
-:host(.empty) ce-pager {
+:host(.empty) ce-avatar-rotator-pager {
     display: none;
 }
