--- a/src/app/avatars/avatar-rotator.component.html
+++ b/src/app/avatars/avatar-rotator.component.html
@@ -4,13 +4,5 @@
 
 <div class="container"></div>
 
-<section>
-    <a class="previous">Previous</a>
-    <span class="current-page-container">
-        <a class="current-page"></a>/<a class="total-pages"></a>
-    </span>
-    <a class="next">Next</a>
-</section>
-
-<ce-pager></ce-pager>
+<ce-avatar-rotator-pager></ce-avatar-rotator-pager>
 
